# site-availability-checker

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/bot/: client.py  handlers.py
app/checker/: screenshot.py  site_checker.py
app/config/: settings.py
app/notifier/: telegram.py
app/scheduler/: monitor.py
nginx/: nginx.conf
utils/: logger.py
