[project]
name = "site-availability-telegram-bot"
version = "0.1.0"
description = "Telegram bot that monitors site availability and sends screenshots on errors"
requires-python = ">=3.13"
dependencies = [
    "python-telegram-bot>=21.0",
    "playwright>=1.40.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
